--- a/thermostat.css
+++ b/thermostat.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css?family=Quantico&display=swap');
 
 body {
@@ -36,16 +35,23 @@ p {
   font-size: 45px;
   text-decoration: none;
   position: relative;
-  bottom: 139px;
-  left: 44px;
+  bottom: 157px;
+  left: 41px;
 }
 
 .down {
   font-size: 92px;
   text-decoration: none;
   position: relative;
-  bottom: 130px;
-  left: 195px;
+  bottom: 145px;
+  left: 197px;
+}
+
+.energy {
+  font-size: 20px;
+  position: absolute;
+  bottom: 308px;
+  margin-left: 87px;
 }
 
 a:visited {
@@ -54,7 +60,7 @@ a:visited {
 
 button {
   position: relative;
-  left: 69px;
+  left: 55px;
   bottom: 100px;
   margin: auto;
   height: 30px;
