Updated Energy Status CSS code

--- a/thermostat.css
+++ b/thermostat.css
@@ -49,8 +49,8 @@ p {
 
 .energy {
   font-size: 20px;
-  position: absolute;
-  bottom: 308px;
+  position: relative;
+  bottom: 168px;
   margin-left: 87px;
 }
 
