--- a/thermostat.css
+++ b/thermostat.css
@@ -72,7 +72,7 @@ button {
 }
 
 .low-usage {
-  background-color: green;
+  background-color: #34eb34;
   font-size: 20px;
   position: relative;
   bottom: 168px;
@@ -80,7 +80,7 @@ button {
 }
 
 .medium-usage {
-  background-color: yellow;
+  background-color: orange;
   font-size: 20px;
   position: relative;
   bottom: 168px;
